Done Hypotesis Testing

--- a/src/notebooks/eda.ipynb
+++ b/src/notebooks/eda.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 108,
    "id": "532054e8",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 109,
    "id": "6e47631e",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "(987346, 54)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "fa93c7e1",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
    ],
    "source": [
     "# Countplot for categorical data (Gender)\n",
-    "sns.countplot(x=df['Gender'])\n",
+    "sns.countplot(x=df_filtered['Gender'])\n",
     "plt.title(\"Distribution of Gender\")\n",
     "plt.show()"
    ]
@@ -517,13 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "d3de2326",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert to datetime format\n",
-    "df['TransactionMonth'] = pd.to_datetime(df['TransactionMonth'])"
+    "df['TransactionMonth'] = pd.to_datetime(df_filtered['TransactionMonth'])"
    ]
   },
   {
@@ -538,14 +538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "0eb8abb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Clean all columns that should be numeric\n",
     "for col in ['SumInsured', 'CalculatedPremiumPerTerm', 'TotalPremium', 'TotalClaims', 'CapitalOutstanding']:\n",
-    "    if col in df.columns:\n",
+    "    if col in df_filtered.columns:\n",
     "        df[col] = pd.to_numeric(df[col], errors='coerce')\n"
    ]
   },
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "ebbbb609",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
    ],
    "source": [
     "# Claim severity vs. VehicleType\n",
-    "sns.boxplot(x=df['VehicleType'], y=df['SumInsured'])\n",
+    "sns.boxplot(x=df_filtered['VehicleType'], y=df_filtered['SumInsured'])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"Claim Severity Across Vehicle Types\")\n",
     "plt.show()"
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "d6f03e7c",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
    ],
    "source": [
     "# Premium vs. Gender (risk comparison)\n",
-    "sns.barplot(x=df[\"Gender\"], y=df[\"TotalPremium\"])\n",
+    "sns.barplot(x=df_filtered[\"Gender\"], y=df_filtered[\"TotalPremium\"])\n",
     "plt.title(\"Total Premium by Gender\")\n",
     "plt.show()"
    ]
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "c2d791ea",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
    "source": [
     "# Line plot for Claim Amounts over time\n",
     "plt.figure(figsize=(12,5))\n",
-    "sns.lineplot(x=df['TransactionMonth'], y=df['TotalClaims'])\n",
+    "sns.lineplot(x=df_filtered['TransactionMonth'], y=df_filtered['TotalClaims'])\n",
     "plt.title(\"Claim Amount Trend Over Time\")\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "d8bb4232",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
    ],
    "source": [
     "# Calculate overall Loss Ratio\n",
-    "overall_loss_ratio = df['TotalClaims'].sum() / df['TotalPremium'].sum()\n",
+    "overall_loss_ratio = df_filtered['TotalClaims'].sum() / df_filtered['TotalPremium'].sum()\n",
     "print(f\"Overall Loss Ratio: {overall_loss_ratio:.2f}\")\n"
    ]
   },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "3d08d408",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
    ],
    "source": [
     "# Loss Ratio grouped by Province\n",
-    "loss_ratio_province = df.groupby('Province', observed=False).apply(lambda x: x['TotalClaims'].sum() / x['TotalPremium'].sum(), include_groups=False).reset_index()\n",
+    "loss_ratio_province = df_filtered.groupby('Province', observed=False).apply(lambda x: x['TotalClaims'].sum() / x['TotalPremium'].sum(), include_groups=False).reset_index()\n",
     "loss_ratio_province.columns = ['Province', 'LossRatio']\n",
     "\n",
     "# Display results\n",
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "306e1403",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
    ],
    "source": [
     "# Loss Ratio by Gender\n",
-    "loss_ratio_gender = df.groupby('Gender', observed=False).apply(lambda x: x['TotalClaims'].sum() / x['TotalPremium'].sum(), include_groups=False).reset_index()\n",
+    "loss_ratio_gender = df_filtered.groupby('Gender', observed=False).apply(lambda x: x['TotalClaims'].sum() / x['TotalPremium'].sum(), include_groups=False).reset_index()\n",
     "loss_ratio_gender.columns = ['Gender', 'LossRatio']\n",
     "\n",
     "# Display results\n",
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "5f9ccb53",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
    ],
    "source": [
     "# Group by Vehicle Make & Model and calculate total claims\n",
-    "claims_by_vehicle = df.groupby(['make', 'Model'])['TotalClaims'].sum().reset_index()\n",
+    "claims_by_vehicle = df_filtered.groupby(['make', 'Model'])['TotalClaims'].sum().reset_index()\n",
     "\n",
     "# Sort results to find highest and lowest claim amounts\n",
     "highest_claims = claims_by_vehicle.sort_values(by='TotalClaims', ascending=False).head(10)\n",
@@ -931,6 +931,16 @@
     "plt.xticks(rotation=45)\n",
     "plt.title(\"Vehicles with Highest Claim Amounts\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "88a471eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered.to_parquet('../../data/clean_data.parquet', index=False)"
    ]
   }
  ],
