Added documentation for statical modeling notebook

--- a/src/notebooks/statistical_modeling.ipynb
+++ b/src/notebooks/statistical_modeling.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3d0ae334",
+   "metadata": {},
+   "source": [
+    "### Import Libraries\n",
+    "\n",
+    "Import all necessary libraries for data manipulation, machine learning, and model interpretation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e5e1d713",
@@ -28,6 +38,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01f0e680",
+   "metadata": {},
+   "source": [
+    "### Load and Prepare Data\n",
+    "\n",
+    "Load the cleaned insurance dataset and create a binary target column (`HasClaim`) indicating whether a claim was made."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b9c73fa0",
@@ -36,6 +56,16 @@
    "source": [
     "df = pd.read_parquet('../../data/clean_data.parquet')\n",
     "df['HasClaim'] = df['TotalClaims'].apply(lambda x: 1 if x > 0 else 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01640a82",
+   "metadata": {},
+   "source": [
+    "### Handle Missing Values\n",
+    "\n",
+    "Check for missing values, fill missing numerical values with the median, and drop rows with excessive missing data."
    ]
   },
   {
@@ -119,6 +149,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d636a6a",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering\n",
+    "\n",
+    "Create new features: `VehicleAge` (based on registration year) and `PremiumPerClaimRatio` (premium per claim, avoiding division by zero)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "696d1801",
@@ -127,6 +167,16 @@
    "source": [
     "df['VehicleAge'] = 2025 - df['RegistrationYear']\n",
     "df['PremiumPerClaimRatio'] = df['TotalPremium'] / (df['TotalClaims'] + 1) # Avoid division by zero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58c57e35",
+   "metadata": {},
+   "source": [
+    "### Encode Categorical Features\n",
+    "\n",
+    "Apply label encoding to categorical columns so they can be used in machine learning models."
    ]
   },
   {
@@ -152,6 +202,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58632b6a",
+   "metadata": {},
+   "source": [
+    "### Prepare Features and Target\n",
+    "\n",
+    "Select important columns for modeling and split the data into features (`X`) and target (`y`), then create train/test splits."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "268e1748",
@@ -166,6 +226,16 @@
     "\n",
     "# Split dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69110921",
+   "metadata": {},
+   "source": [
+    "### Check Feature Matrix Shape\n",
+    "\n",
+    "Display the shape of the feature matrix to confirm the number of samples and features."
    ]
   },
   {
@@ -187,6 +257,16 @@
    ],
    "source": [
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af8cbb0f",
+   "metadata": {},
+   "source": [
+    "### Train Claim Severity Prediction Model\n",
+    "\n",
+    "Train an XGBoost regressor to predict claim severity using the training data."
    ]
   },
   {
@@ -1175,6 +1255,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4f72fd4",
+   "metadata": {},
+   "source": [
+    "### Evaluate Regression Model\n",
+    "\n",
+    "Predict on the test set and evaluate the regression model using RMSE and R² metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "0ffb7370",
@@ -1202,7 +1292,9 @@
    "id": "4463e27f",
    "metadata": {},
    "source": [
-    "# Feature Importance"
+    "### Feature Importance\n",
+    "\n",
+    "Plot the feature importances from the trained XGBoost regressor to understand which features influence predictions most."
    ]
   },
   {
@@ -1230,6 +1322,16 @@
     "\n",
     "fi.plot(kind='barh', figsize=(10, 6), title='Feature Importance')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea59d9f",
+   "metadata": {},
+   "source": [
+    "### Train Claim Frequency Model\n",
+    "\n",
+    "Train a `HistGradientBoostingClassifier` to predict the probability of a claim (`HasClaim`)."
    ]
   },
   {
@@ -2005,6 +2107,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79132139",
+   "metadata": {},
+   "source": [
+    "### Evaluate Claim Frequency Model\n",
+    "\n",
+    "Predict and evaluate the classifier using accuracy and ROC AUC metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "24b934e7",
@@ -2029,6 +2141,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9696f645",
+   "metadata": {},
+   "source": [
+    "### Premium Calculation Function\n",
+    "\n",
+    "Define a function to calculate risk-based premiums using predicted claim probability and severity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "fec81ea8",
@@ -2038,6 +2160,16 @@
     "def calc_premium(p_claim, e_claim, expense=0.15, margin=0.10):\n",
     "    \"\"\"Return risk-based premium in ZAR.\"\"\"\n",
     "    return (p_claim * e_claim) / (1 - expense - margin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "960139ff",
+   "metadata": {},
+   "source": [
+    "### Predict and Calculate Optimized Premiums\n",
+    "\n",
+    "Predict claim probability and severity for all records, then calculate optimized premiums using the custom function."
    ]
   },
   {
@@ -2052,6 +2184,16 @@
     "\n",
     "# Calculate optimized premiums\n",
     "df[\"OptimizedPremium\"] = df.apply(lambda row: calc_premium(row[\"PredictedClaimProb\"], row[\"PredictedClaimSeverity\"]), axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51fa6137",
+   "metadata": {},
+   "source": [
+    "### Show Predictions and Optimized Premiums\n",
+    "\n",
+    "Display the predicted claim probability, severity, and optimized premium for each record."
    ]
   },
   {
@@ -2182,6 +2324,16 @@
    ],
    "source": [
     "df[['PredictedClaimProb', 'PredictedClaimSeverity', 'OptimizedPremium']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b45190e",
+   "metadata": {},
+   "source": [
+    "### SHAP Feature Importance Visualization\n",
+    "\n",
+    "Use SHAP to explain the XGBoost model's predictions and visualize feature importance."
    ]
   },
   {
