Added a code to save a model

--- a/src/notebooks/statistical_modeling.ipynb
+++ b/src/notebooks/statistical_modeling.ipynb
@@ -12,19 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "e5e1d713",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/est-lul/Documents/Projects/insurance_risk_analytics/.venv/lib64/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -34,7 +25,9 @@
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import shap"
+    "import shap\n",
+    "\n",
+    "import joblib"
    ]
   },
   {
@@ -1255,6 +1248,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "66570bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.save_model('../../models/xgb_claims_model.json')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d4f72fd4",
    "metadata": {},
@@ -2104,6 +2107,27 @@
     "# Train model for claim occurrence\n",
     "model_freq = HistGradientBoostingClassifier(max_iter=200, learning_rate=0.1)\n",
     "model_freq.fit(Xc_train, yc_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6cede678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../models/hgb_claims_freq_model.joblib']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model_freq, '../../models/hgb_claims_freq_model.joblib')"
    ]
   },
   {
