--- a/src/notebooks/statistical_modeling.ipynb
+++ b/src/notebooks/statistical_modeling.ipynb
@@ -1248,6 +1248,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4310dbe9",
+   "metadata": {},
+   "source": [
+    "### Save Trained Regression Model\n",
+    "\n",
+    "Persist the trained XGBoost regression model to disk for future use or deployment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "66570bce",
@@ -2107,6 +2117,16 @@
     "# Train model for claim occurrence\n",
     "model_freq = HistGradientBoostingClassifier(max_iter=200, learning_rate=0.1)\n",
     "model_freq.fit(Xc_train, yc_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "576e2515",
+   "metadata": {},
+   "source": [
+    "### Save Claim Frequency Model\n",
+    "\n",
+    "Persist the trained `HistGradientBoostingClassifier` model to disk for future use or deployment."
    ]
   },
   {
